# RO-Purifier

./: .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt  schema.yml
.github/workflows/: pre-commit.yml
api/: urls.py
backend/: settings.py  urls.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/Admin/: HomeAdmin.jsx
frontend/src/Authentication/: Login.jsx  Signup.jsx  SignupAdmin.jsx  SignupUser.jsx
frontend/src/Pages/: About.jsx  Cart.jsx  Contact.jsx  LandingPage.jsx  ProductsDetails.jsx  ProductsPage.jsx
frontend/src/Profile/: Profile.jsx  ProfileSettings.jsx
frontend/src/ProtectedRoutes/: ProtectedRote.jsx
frontend/src/Services/: authService.jsx  axiosInstance.jsx
frontend/src/context/: CartContext.jsx
frontend/src/data/: Productsdata.js
frontend/src/reusableComponents/: AdminNavbar.jsx  BannerCard.jsx  BentoGrid.jsx  Button.jsx  CarouselSlider.jsx  FeaturesList.jsx  FilterOption.jsx  Footer.jsx  Input.jsx  ListCards.jsx  ModalPopup.jsx  Navbar.jsx  ProductCard.jsx  SearchBar.jsx  TechnicianCard.jsx
frontend/src/utils/: Jwt.jsx  auth.jsx
static/css/: jazzmin-fix.css
test/: test_users.py
users/: admin.py  models.py  permissions.py  serializers.py  signals.py  utils.py  views.py
