[project]
name = "ro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=25.11.0",
    "django-jazzmin>=3.0.1",
    "django-silk>=5.4.3",
    "djangorestframework>=3.16.1",
    "python-decouple>=3.8",
    "ruff>=0.14.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.5",
]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "D", "UP", "B", "DJ"]
ignore = [
    "D100", "D104", 
    "D101", "D102", "D103",   
    "D203", "D212",
   
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["backend", "api", "users"]


